--- a/src/components/inputs/Inputs.css
+++ b/src/components/inputs/Inputs.css
@@ -18,7 +18,7 @@
 @media (min-width: 1000px) {
 
     .inputs-container {
-
+        flex-direction: row;
         align-items: flex-start;
         justify-content: space-between;
         margin-block: 3rem;
